bug: removed overflow

--- a/beauty.css
+++ b/beauty.css
@@ -65,7 +65,7 @@ nav, a{
     font-size: 40px;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 798px) {
     .gallery img {
         max-width: 100%;
         height: auto;
